Fix Netlify run

--- a/.github/workflows/netlify.yaml
+++ b/.github/workflows/netlify.yaml
@@ -8,6 +8,7 @@ on:
       - completed
 jobs:
   deploy:
+    if: github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.event == 'pull_request'
     runs-on: ubuntu-latest
     steps:
       - name: 📝 Create Deployment
