Add support for JSX in stuff we import in Cypress test code
Spawning from:

 - https://github.com/matrix-org/matrix-react-sdk/pull/8354#discussion_r883260722
 - https://github.com/matrix-org/matrix-react-sdk/pull/8354#discussion_r878660677

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,9 +1,18 @@
 {
     "compilerOptions": {
         "target": "es2016",
-        "lib": ["es2020", "dom"],
+        "jsx": "react",
+        "lib": [
+            "es2020",
+            "dom",
+            "dom.iterable"
+        ],
         "types": ["cypress", "@percy/cypress"],
+        "resolveJsonModule": true,
+        "esModuleInterop": true,
         "moduleResolution": "node"
     },
-    "include": ["**/*.ts"]
+    "include": [
+        "**/*.ts"
+    ]
 }
