--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -6,24 +6,18 @@ on:
     types:
       - completed
 jobs:
-  prdetails:
-    name: ℹ️ PR Details
-    if: github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.event == 'pull_request'
-    uses: matrix-org/matrix-js-sdk/.github/workflows/pr_details.yml@develop
-    with:
-      owner: ${{ github.event.workflow_run.head_repository.owner.login }}
-      branch: ${{ github.event.workflow_run.head_branch }}
-
   cypress:
     name: "Cypress End to End Tests"
-    needs: prdetails
-    # Only wait for prdetails if it isn't skipped
-    if: |
-      always() &&
-      (needs.prdetails.result == 'success' || needs.prdetails.result == 'skipped') &&
-      github.event.workflow_run.conclusion == 'success'
+    if: github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.event == 'pull_request'
     runs-on: ubuntu-latest
     steps:
+      - id: prdetails
+        uses: matrix-org/pr-details-action@v1.1
+        with:
+          owner: ${{ github.event.workflow_run.head_repository.owner.login }}
+          branch: ${{ github.event.workflow_run.head_branch }}
+
+      - uses: haya14busa/action-workflow_run-status@967ed83efa565c257675ed70cfe5231f062ddd94 # v1.0.0
       - uses: actions/checkout@v2
 
       # There's a 'download artifact' action, but it hasn't been updated for the workflow_run action
