--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -123,7 +123,7 @@ jobs:
     if: |
       github.event.workflow_run.event != 'pull_request' &&
       github.event.workflow_run.head_branch == 'develop' &&
-      github.event.pull_request.head.repo.full_name == github.repository
+      github.event.workflow_run.head_repository.full_name == github.repository
     permissions:
       contents: write
     steps:
