--- a/.github/workflows/notify-element-web.yml
+++ b/.github/workflows/notify-element-web.yml
@@ -9,7 +9,7 @@ jobs:
     name: "Notify Element Web"
     runs-on: ubuntu-latest
     # Only respect triggers from our develop branch, ignore that of forks
-    if: github.event.pull_request.head.repo.full_name == github.repository
+    if: github.repository == 'matrix-org/matrix-react-sdk'
     steps:
       - name: Notify element-web repo that a new SDK build is on develop
         uses: peter-evans/repository-dispatch@v1
